@@ -16,6 +16,8 @@ RELEASE 0.97 - XXX
     it's an error if the specified entry doesn't exist.  The default
     behavior is now to silently do nothing if it doesn't exist.
 
+  - Package up the new Platform/darwin.py, mistakenly left out of 0.96.
+
 
 
 RELEASE 0.96 - Wed, 18 Aug 2004 13:36:40 +0000
